[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/build-and-deploy/Build.gd" type="Script" id=1]

[node name="Build" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChannelsLabel" type="Label" parent="VBoxContainer"]
margin_right = 1016.0
margin_bottom = 14.0
text = "Select which platforms you would like to build for, and fill in your project's name"
autowrap = true

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1016.0
margin_bottom = 32.0
text = "Please Note: you will need to configure the EDITOR's export presets in the EDITOR's export menu"
autowrap = true

[node name="Game" type="LineEdit" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 1016.0
margin_bottom = 60.0
hint_tooltip = "If you already have the name of your game set in the export menu you can skip this step"
placeholder_text = "Game Name"

[node name="Windows" type="CheckBox" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 1016.0
margin_bottom = 88.0
text = "Windows"

[node name="Linux" type="CheckBox" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 1016.0
margin_bottom = 116.0
text = "Linux"

[node name="Mac" type="CheckBox" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 1016.0
margin_bottom = 144.0
text = "Mac"

[node name="HTML5" type="CheckBox" parent="VBoxContainer"]
margin_top = 148.0
margin_right = 1016.0
margin_bottom = 172.0
text = "HTML5"

[node name="Async" type="CheckBox" parent="VBoxContainer"]
margin_top = 176.0
margin_right = 1016.0
margin_bottom = 200.0
hint_tooltip = "when in pause mode (recommended) the editor will pause it's process until the build is finished (you will not be able to interact with the editor until butler is done)"
pressed = true
text = "Pause Mode"

[node name="SavePresets" type="Button" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 1016.0
margin_bottom = 224.0
hint_tooltip = "save currently selected presets to persistant storage"
text = "Save Presets"
align = 0

[node name="Build" type="Button" parent="VBoxContainer"]
margin_top = 228.0
margin_right = 1016.0
margin_bottom = 248.0
text = "Build"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectDir" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 210.0
margin_right = 1016.0
margin_bottom = 230.0
text = "Click to select a directory"
align = 0

[node name="BuildDir" type="LineEdit" parent="VBoxContainer"]
visible = false
margin_top = 210.0
margin_right = 1016.0
margin_bottom = 234.0
placeholder_text = "Path To Build Folder"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 131.5
rect_min_size = Vector2( 250, 87.5 )
window_title = "Open a Directory"
resizable = true
dialog_text = "Select a Directory to Build into"
mode = 2
access = 2
current_dir = "/Users/aidan_v7p35uv/Documents/figroot/godot-build-and-deploy-plugin"
current_path = "/Users/aidan_v7p35uv/Documents/figroot/godot-build-and-deploy-plugin/"

[connection signal="pressed" from="VBoxContainer/Build" to="." method="_on_Build_pressed"]
[connection signal="pressed" from="VBoxContainer/SelectDir" to="." method="_on_SelectDir_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
